# footAI

./: .gitignore  LICENSE  MODEL_CARD.md  Makefile  README.md  app.py  calculate_elo.py  common.py  dash.py  download_data.py  main.py  plot_elo.py  promotion_relegation.py  pyproject.toml  requirements.txt
.github/workflows/: dashboard_status.yml  lint-docs.yml  update_data.yml
assets/badge/: dashboard_status.json
assets/web/: broadcast_ready.js
data/colors/: DE_colors.json  EN_colors.json  FR_colors.json  IT_colors.json  SP_colors.json
data/processed/DE/: D1_1516_to_2526_transfer.csv  D2_1516_to_2526_transfer.csv
data/processed/EN/: E0_1516_to_2526_transfer.csv  E1_1516_to_2526_transfer.csv
data/processed/FR/: F1_1516_to_2526_transfer.csv  F2_1516_to_2526_transfer.csv
data/processed/IT/: I1_1516_to_2526_transfer.csv  I2_1516_to_2526_transfer.csv
data/processed/SP/: SP1_1516_to_2526_transfer.csv  SP2_1516_to_2526_transfer.csv
docs/: feature_configuration.md  features.md  model_architecture_decisions.md  model_selection.md
scripts/: validate_features.py
src/footai/: cli.py  main.py
src/footai/cli/: download.py  elo.py  features.py  parser.py  plot.py  promotion.py  train.py
src/footai/core/: config.py  elo.py  team_movements.py  utils.py  validators.py
src/footai/data/: downloader.py  feature_loader.py  team_colors.py
src/footai/ml/: evaluation.py  feature_engineering.py  models.py  training.py  tune.py
src/footai/utils/: config.py  logger.py  paths.py  validators.py
tests/: conftest.py  test_cli.py  test_parsing.py  test_validators.py
(+8 files in other folders)
