[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footai"
version = "0.2.0"
dependencies = [
    "pandas",
    "plotly",
    "requests",
    "dash",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",

]

[project.scripts]
footai = "footai.main:main"

[tool.setuptools.packages.find]
where = ["src"]
