[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "footai"
version = "1.0.0"
dependencies = [
    "pandas",
    "plotly",
    "requests",
    "dash",
    "scikit-learn",
    "kaleido",
    "beautifulsoup4",
    "gunicorn>=21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "xgboost",
    "lightgbm",

]

[project.scripts]
footai = "footai.main:main"

[tool.setuptools.packages.find]
where = ["src"]
